email gu e jv index.html

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
           <h2 class="nome">João Victor</h2>
           <ul>
             <li>
-              <a href="https://github.com/"><i class="fa-brands fa-github github"></i></a>
+              <a href="https://github.com/joaovomitblasfermi/"><i class="fa-brands fa-github github"></i></a>
             </li>
             <li>
-              <a href="mailto:"><i class="fa-solid fa-envelope email"></i></a>
+              <a href="mailto:joaovictorvenceslau19@gmail.com"><i class="fa-solid fa-envelope email"></i></a>
             </li>
           </ul>
         </div>
@@ -169,7 +169,7 @@
               <a href="https://instagram.com/sucodegu/"><i class="fa-brands fa-instagram instagram"></i></a>
             </li>
             <li>
-              <a href="mailto:"><i class="fa-solid fa-envelope email"></i></a>
+              <a href="mailto:gustavovanderley2008@gmail.com"><i class="fa-solid fa-envelope email"></i></a>
             </li>
             <li>
               <a href="tel:+55(81)99761-6765"><i class="fa-brands fa-whatsapp whatsapp"></i></a>
